# Kakeibo

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile  sqlx-data.json
backend/: Cargo.toml  ddl.sql  dockerfile
backend/src/: main.rs
backend/src/api/: controller.rs  service.rs  store.rs
backend/src/api/controller/: login.rs  request.rs
backend/src/api/controller/request/: login.rs  money.rs  transaction_entity.rs  transaction_id.rs  user.rs
backend/src/api/service/: login.rs  user.rs
backend/src/api/store/: transaction_entity.rs  user.rs
backend/src/db/: connect.rs  init.rs
docker/mysql/sql/: init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: AssetTable.js  LoginForm.js  TransactionsDialog.js  TransactionsTable.js
frontend/src/pages/: Login.js  User.js
frontend/src/scripts/api/: createNewTransactionEntity.js  createTransactions.js  createUser.js  fetchAssets.js  fetchTransactionEntities.js  fetchTransactions.js  login.js
src/: api.rs  db.rs  main.rs
src/api/: controller.rs  service.rs  store.rs
src/api/controller/: money_transaction.rs  request.rs  transaction_entity.rs  user.rs
src/api/controller/request/: asset.rs  money.rs  supplier.rs  transaction_entity.rs  user.rs
src/api/service/: money_transaction.rs  service_money_transaction.rs  transaction_entity.rs  user.rs
src/api/store/: money_transaction.rs  store_money_transaction.rs  transaction_entity.rs  user.rs
src/db/: connect.rs
