[package]
name = "kakeibo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "mysql", "chrono" ] }
